# github-org-actions

./: .example.env  Dockerfile  Procfile  README.md  compose.production.yaml  compose.production.yml  fly.toml  main.py  pull_css.sh  pyproject.toml  requirements.txt
.github/workflows/: build-and-deploy.yml  deploy.yml
github_org_actions/: github.py  models.py
static/: styles.css
templates/: base.html  error.html  index.html  org.html
