[project]
name = "github-org-actions"
version = "0.1.0"
description = "Simple deployment dashboard for GitHub orgs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "gql[all]>=3.5.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "sentry-sdk[fastapi]>=2.18.0",
]
